# Desenvolvimento_django

./: .gitignore  README.md
mysite/: pyproject.toml
mysite/accounts/: urls.py  views.py
mysite/accounts/templates/accounts/: login.html
mysite/contacts/: urls.py  views.py
mysite/contacts/migrations/: 0001_initial.py
mysite/mysite/: admin.py  settings.py  urls.py
mysite/polls/: models.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options_and_more.py
mysite/polls/templates/polls/: results.html
